--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,6 +1,6 @@
 .report-comment-form
   .report-comment__author
-    = gravatar_tag current_user, size: 200, html: { class: "report-comment__author-icon"}
+    = gravatar_tag current_user, secure: true, size: 200, html: { class: "report-comment__author-icon"}
   = form_for [question, answer], html: {class: 'report-comment-form__form'} do |f|
     - if answer.errors.any?
       = error_messages_for :answer
