--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -19,7 +19,7 @@ header.page-header
             - if entry.author
               li.entry-header__meta-item.is-author
                 | posted by #{entry.author}
-                //= gravatar_tag entry.author, size: 44, html: { class: "report-list-item__author-icon"}
+                //= gravatar_tag entry.author, secure: true, size: 44, html: { class: "report-list-item__author-icon"}
         .entry-body
           - if entry.content.nil?
             .is-long-text-style= raw entry.summary
