--- a/app/views/practices/_reports.slim
+++ b/app/views/practices/_reports.slim
@@ -5,7 +5,7 @@
     - reports.each do |report|
       .user-reports-item(class= "#{current_user == report.user ? 'is-mine' : ''}")
         = link_to report, class: 'user-reports-item__link has-user-icon' do
-          = gravatar_tag report.user, size: 64, html: {class: 'user-reports-item__user-icon'}
+          = gravatar_tag report.user, secure: true, size: 64, html: {class: 'user-reports-item__user-icon'}
           h3.user-reports-item__title itemprop="name"
             = report.title
           time.user-reports-item__updated-at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
