--- a/app/views/reports/_recent_reports.slim
+++ b/app/views/reports/_recent_reports.slim
@@ -1,6 +1,6 @@
 .recent-reports-item
   = link_to report, class: 'recent-reports-item__link' do
-    = gravatar_tag report.user, size: 88, html: { class: "recent-reports-item__user-icon" }
+    = gravatar_tag report.user, secure: true, size: 88, html: { class: "recent-reports-item__user-icon" }
     h3.recent-reports-item__title
       = report.title
     time.recent-reports-item__date
