--- a/app/views/reports/_report_comment.slim
+++ b/app/views/reports/_report_comment.slim
@@ -1,7 +1,7 @@
 .report-comment
   .report-comment__author
     = link_to comment.user, itempro: 'url', class: 'report-comment__author-link' do
-      = gravatar_tag comment.user, size: 200, html: { class: "report-comment__author-icon"}
+      = gravatar_tag comment.user, secure: true, size: 200, html: { class: "report-comment__author-icon"}
   .report-comment__body
     header.report-comment__body-header
       h2.report-comment__login-name
