--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -7,7 +7,7 @@
             = link_to user.login_name, user, class: "users-item__name-link"
           .users-item__icon
             = link_to user do
-              = gravatar_tag user, html: { class: "users-item__icon-image" }
+              = gravatar_tag user, secure: true, html: { class: "users-item__icon-image" }
       .users-item__body
         .users-item__description
           p= truncate(user.description, length: 100)
