--- a/app/views/application/_formrun.html.slim
+++ b/app/views/application/_formrun.html.slim
@@ -220,7 +220,7 @@
           | フィヨルドブートキャンプを何で知ったか教えてください。
         textarea.auth-form-item__text-input(data-formrun-required="true" name="何で知った？" rows="4" type="text" )
         .auth-form-item__help
-          p 例えば、Googleなどの検索エンジンで見つけ場合は、ググった検索キーワドも教えてもらえると嬉しいです。
+          p 例えば、Googleなどの検索エンジンで見つけた場合は、ググった検索キーワードも教えてもらえると嬉しいです。
         .auth-form-item__error(data-formrun-show-if-error="何で知った？")
           | 必須項目です
 
