--- a/app/views/home/_question_form.slim
+++ b/app/views/home/_question_form.slim
@@ -18,7 +18,7 @@
           | お問い合わせ内容
         textarea.auth-form-item__text-input(data-formrun-required="" name="お問い合わせ" rows="4" type="text")
         .auth-form-item__error(data-formrun-show-if-error="お問い合わせ")
-          | お問い合わせ入力してください
+          | 必須項目です
       .auth-form-item
         label.auth-form-item__label.is-required
           | 個人情報の取り扱いについて
