faq追加、mojik導入、formのタイポ修正

--- a/app/views/application/_formrun.html.slim
+++ b/app/views/application/_formrun.html.slim
@@ -83,7 +83,7 @@
               span.option-text はい
         .auth-form-item__help
           p プログラマーとして就職・転職を希望している方のみ参加できます。
-        .auth-form-item__error(data-formrun-show-if-error="このページの説明を全て読みましたか？")
+        .auth-form-item__error(data-formrun-show-if-error="プログラマーとして就職・転職を希望していますか？")
           | プログラマーとして就職・転職を希望していることが参加条件になります。
 
       .auth-form-item
@@ -92,11 +92,11 @@
         ul.auth-form-item__radio-buttons
           li.auth-form-radio-button
             label.auth-form-radio-button__label
-              input.auth-form-checkbox__input(data-formrun-required="true" name="プログラマーとして就職・転職を希望していますか？" type="radio" value="読んだ")
+              input.auth-form-checkbox__input(data-formrun-required="true" name="プまだ就職・転職先は決まっていないですか？" type="radio" value="読んだ")
               span.option-text はい
         .auth-form-item__help
           p まだ就職先が決まっていない方のみ参加できます。
-        .auth-form-item__error(data-formrun-show-if-error="このページの説明を全て読みましたか？")
+        .auth-form-item__error(data-formrun-show-if-error="まだ就職・転職先は決まっていないですか？")
           | まだ就職先が決まっていないことが参加条件になります。
 
 
@@ -164,19 +164,19 @@
         ul.auth-form-item__radio-buttons.is-half
           li.auth-form-radio-button.is-half
             label.auth-form-radio-button__label
-              input.auth-form-checkbox__input(data-formrun-required="true" name="動ける日数" type="radio" value="週5日")
+              input.auth-form-checkbox__input(data-formrun-required="true" name="学習可能な日数" type="radio" value="週5日")
               span.option-text 週5日
           li.auth-form-radio-button.is-half
             label.auth-form-radio-button__label
-              input.auth-form-checkbox__input(data-formrun-required="true" name="動ける日数" type="radio" value="週4日")
+              input.auth-form-checkbox__input(data-formrun-required="true" name="学習可能な日数" type="radio" value="週4日")
               span.option-text 週4日
           li.auth-form-radio-button.is-half
             label.auth-form-radio-button__label
-              input.auth-form-checkbox__input(data-formrun-required="true" name="動ける日数" type="radio" value="週3日")
+              input.auth-form-checkbox__input(data-formrun-required="true" name="学習可能な日数" type="radio" value="週3日")
               span.option-text 週3日
         .auth-form-item__help
           p 一週間の合計稼働時間が24時間以上でかつ、週3日以上稼働することが必須条件です（プログラミング経験者の場合はそれに達さなくてもOK）。
-        .auth-form-item__error(data-formrun-show-if-error="動ける日数")
+        .auth-form-item__error(data-formrun-show-if-error="学習可能な日数")
           | 必須項目です
 
       .auth-form-item
