--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -4,7 +4,7 @@ section.welcome-section.is-administrator#administrator
       = image_tag("administrator-title.svg", alt: "運営会社", class: "welcome-section__title-image")
     h3.welcome-section__sub-title.is-reversal
       | 合同会社フィヨルド
-    .welcome-section__description.is-reversal
+    .welcome-section__description.is-reversal.js-mojik
       p
         | 東京の初台にある合同会社フィヨルドという会社です。自社で運営しているサービスを開発しながら、お客様からお金をいただいてお客様のシステムを開発する仕事（受託開発）をしています。
     section.welcome-child-section
