--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -10,8 +10,7 @@ body
   overflow-y: scroll
   .modal-open
     overflow: hidden
-  &.home-welcome,
-  &.home-index
+  &.home-welcome
     background-color: $base-color
   &.has-background
     background-image: image_url('main-visual.jpg')
@@ -40,8 +39,7 @@ body
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
 
-.home-welcome,
-.home-index
+.home-welcome
   .container
     max-width: 75rem
     +padding(horizontal, 1rem)
