--- a/app/assets/stylesheets/blocks/shared/_faces.sass
+++ b/app/assets/stylesheets/blocks/shared/_faces.sass
@@ -6,15 +6,22 @@
 
 .faces__items
   display: flex
-  flex-wrap: wrap
-  justify-content: center
+  flex-wrap: nowrap
+  justify-content: flex-start
+  overflow: auto
 
 .faces-item
   margin: 1px 1px 1px 0
   text-align: center
   +position(relative)
+  flex: 0 0 4.5rem
+  +size(4.5rem)
 
 .faces-item__name
-  +text-block(.625rem 1.45, 700 center)
+  +text-block(.625rem 1.45, 700 center nowrap)
   +position(absolute, left 0, top 0, right 0)
   text-shadow: 0px 1px 1px white, 0px 0px 1px white, 1px 0px 1px white, 0px -1px 1px white, -1px -1px 1px white, -1px 0px 1px white
+  +size(100% auto)
+  overflow: hidden
+  +padding(horizontal, .25rem)
+  text-overflow: ellipsis
