--- a/app/views/application/_formrun.html.slim
+++ b/app/views/application/_formrun.html.slim
@@ -92,7 +92,7 @@
         ul.auth-form-item__radio-buttons
           li.auth-form-radio-button
             label.auth-form-radio-button__label
-              input.auth-form-checkbox__input(data-formrun-required="true" name="プまだ就職・転職先は決まっていないですか？" type="radio" value="読んだ")
+              input.auth-form-checkbox__input(data-formrun-required="true" name="まだ就職・転職先は決まっていないですか？" type="radio" value="読んだ")
               span.option-text はい
         .auth-form-item__help
           p まだ就職先が決まっていない方のみ参加できます。
