一部の文字を使うと編集ページが表示されない問題を修正

--- a/app/views/pages/edit.html.slim
+++ b/app/views/pages/edit.html.slim
@@ -6,4 +6,4 @@ header.page-header
 
 .page-body
   .container
-    = render 'form', page: @page, method: "PATCH", url: "/pages/#{@page.title}"
+    = render 'form', page: @page, method: "PATCH", url: "/pages/#{CGI.escape(@page.title)}"
