--- a/app/views/home/_finding_employment.slim
+++ b/app/views/home/_finding_employment.slim
@@ -57,7 +57,7 @@ section.welcome-section.is-finding-employment#finding-employment
 
     section.welcome-child-section
       h3.welcome-child-section__title
-        | 提携企業
+        | 紹介企業
       .company-logos
         p.is-text-align-center
           | ここに素敵な企業のロゴが並ぶ予定です。
