サイトのアクセス解析を追加

--- a/app/views/home/_welcome_header.slim
+++ b/app/views/home/_welcome_header.slim
@@ -9,7 +9,7 @@ header.welcome-header
                 | プラクティス
             - else
               = link_to "/login", class: "welcome-header-nav__item-link is-login" do
-                | 研修生入り口
+                | 受講者入り口
           //
             li.welcome-header-nav__item
               = link_to "", class: "welcome-header-nav__item-link is-company" do
