--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,16 +2,19 @@ doctype html
 html.is-application lang="ja"
   - page_classes = content_for(:page_classes).to_s
   head
+    = render "google_tag_manager_head"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
-    = render "favicons"
     = display_meta_tags default_meta_tags
     = javascript_include_tag 'application'
     = javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js', integrity: 'sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==', crossorigin: 'anonymous'
     = javascript_pack_tag "application"
     = csrf_meta_tags
+    = render "favicons"
     - if page_classes.include?("welcome")
       = stylesheet_link_tag 'welcome', media: 'all'
       = javascript_pack_tag "mojik"
+      - if page_classes.include?("welcome-home")
+        link(rel="canonical" href="https://bootcamp.fjord.jp/")
     - else
       = render "current_user"
       = stylesheet_link_tag 'application', media: 'all'
@@ -19,6 +22,7 @@ html.is-application lang="ja"
     = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all'
     = content_for(:head_last) if content_for?(:head_last)
   body#body class="#{body_class} #{page_classes}"
+    = render "google_tag_manager_body"
     - if current_user && page_classes.exclude?("no-global-nav")
         = render "global_nav"
     .wrapper.js-open-drawer-wrapper
