デザイン微調整

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -6,6 +6,8 @@
   border: solid 1px #c1c5b9
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
+  +media-breakpoint-down(sm)
+    font-size: 1rem
   &:focus
     background-color: $base-color
     box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset
@@ -21,6 +23,8 @@
   border: solid 1px #c1c5b9
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
+  +media-breakpoint-down(sm)
+    font-size: 1rem
   &:focus
     background-color: $base-color
     box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset
@@ -33,6 +37,8 @@
   border: solid 1px #c1c5b9
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
+  +media-breakpoint-down(sm)
+    font-size: 1rem
   .field_with_errors &
     border-color: #e1a7b6
     background-color: #fefafb
@@ -62,6 +68,8 @@ textarea.a-sm-text-input
   border: solid 1px #c1c5b9
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
+  +media-breakpoint-down(sm)
+    font-size: 1rem
   &:focus
     background-color: $base-color
     border-color: #c4c7bf
