--- a/app/assets/stylesheets/blocks/user/_users.sass
+++ b/app/assets/stylesheets/blocks/user/_users.sass
@@ -20,7 +20,7 @@
 
 .users-item__name-link
   +text-block(1rem 1.45, 600 $main-color block)
-  +padding(vertical, .5rem)
+  padding-top: .5rem
   +hover-link
 
 .users-item__icon-image
