--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
@@ -23,6 +23,8 @@
   border: solid 1px #515556
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
+  +media-breakpoint-down(sm)
+    font-size: 1rem
   &.formrun-has-error
     border-color: #ec829d
     background-color: #fefafb
