--- a/app/views/static_pages/thanks.html.slim
+++ b/app/views/static_pages/thanks.html.slim
@@ -1,7 +1,7 @@
 - content_for(:page_classes, 'no-header no-recent-reports no-global-nav')
 .thanks
   = link_to root_path, class: "" do
-    = image_tag('logo-colored.svg', class: 'thanks__logo-image')
+    = image_tag('logo.svg', class: 'thanks__logo-image')
   .thanks__body
     .thanks__icon
       i.fa.fa-check-circle-o
