--- a/app/views/users/_sns.html.slim
+++ b/app/views/users/_sns.html.slim
@@ -15,7 +15,7 @@
     - if user.blog_url?
       li.user-data-sns__item
         = link_to user.blog_url, class: 'user-data-sns__item-link' do
-          i.fa.fa-home
+          i.fa.fa-file-text
     - if user.feed_url?
       li.user-data-sns__item
         = link_to user.feed_url, class: 'user-data-sns__item-link' do
