--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -8,6 +8,7 @@
           .users-item__icon
             = link_to user do
               = gravatar_tag user, secure: true, html: { class: "users-item__icon-image" }
+        = render "users/sns", user: user
       .users-item__body
         .users-item__description
           p= truncate(user.description, length: 100)
