--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -14,11 +14,12 @@
                     = check_box_tag "report[practice_ids][]", practice.id, @report.practices.include?(practice), id: "product_practice_ids_#{practice.id}", class: "select-practices__input"
                     => "[#{category.name}]"
                     span.select-practices__label-title= practice.title
-
           .form-item
-            = f.label :title, class: 'a-label'
-            = f.text_field :title, class: 'a-text-input js-warning-form'
-
+            = f.label :title, class: "a-label"
+            = f.text_field :title, class: "a-text-input js-warning-form", placeholder: "主にやったことをタイトルにしよう"
+          .form-item
+            = f.label :reported_at, class: "a-label"
+            = f.text_field :reported_at, class: "datepicker"
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
