学習日のデフォルト追加 ユーザー写真のリンクの文字色修正

--- a/app/assets/stylesheets/blocks/shared/_faces.sass
+++ b/app/assets/stylesheets/blocks/shared/_faces.sass
@@ -18,7 +18,7 @@
   +size(4.5rem)
 
 .faces-item__name
-  +text-block(.625rem 1.45, 700 center nowrap)
+  +text-block(.625rem 1.45, 700 center nowrap $default-text)
   +position(absolute, left 0, top 0, right 0)
   text-shadow: 0px 1px 1px white, 0px 0px 1px white, 1px 0px 1px white, 0px -1px 1px white, -1px -1px 1px white, -1px 0px 1px white
   +size(100% auto)
