--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -19,7 +19,7 @@
             = f.text_field :title, class: "a-text-input js-warning-form", placeholder: "主にやったことをタイトルにしよう"
           .form-item
             = f.label :reported_at, class: "a-label"
-            = f.text_field :reported_at, class: "datepicker"
+            = f.text_field :reported_at, class: "datepicker a-text-input", value: Date.today.strftime("%Y-%m-%d")
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
