--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -42,7 +42,7 @@
         = link_to reports_path, class: 'is-button-standard-sm-secondary' do
           i.fa.fa-angle-left
           = t('to_index_of_reports')
-        - if admin_can_check_it?
+        - if admin_login? && @report.checks.blank?
           = render 'reports/report_check_form'
 
   = link_to report.user, itempro: "url", class: "report__author-link" do
